--- a/package.json
+++ b/package.json
@@ -11,13 +11,18 @@
   "dependencies": {
     "@radix-ui/react-navigation-menu": "^1.2.14",
     "@radix-ui/react-slot": "^1.2.3",
+    "@sanity/image-url": "^1.2.0",
+    "@sanity/vision": "^4.6.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "gsap": "^3.13.0",
     "lucide-react": "^0.539.0",
     "next": "15.4.6",
+    "next-sanity": "^10.0.16",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "sanity": "^4.6.1",
+    "styled-components": "^6.1.19",
     "swiper": "^11.2.10",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7"
