--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next-sanity": "^10.0.16",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-icons": "^5.5.0",
     "sanity": "^4.6.1",
     "styled-components": "^6.1.19",
     "swiper": "^11.2.10",
